--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - docker build -t gallopabman/frontend -f Dockerfile.dev .
 
   script:  
-    - - docker run -e CI=true gallopabman/frontend npm run test
+    - docker run -e CI=true gallopabman/frontend npm run test
