--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: generic
 sudo: required
 services:
-    - docker
+ - docker
 before_install:
-    - docker build -t gallopabman/frontend -f Dockerfile.dev .
+  - docker build -t gallopabman/frontend -f Dockerfile.dev .
 script:  
-    - docker run -e CI=true gallopabman/frontend npm run test
+  - docker run CI=true gallopabman/frontend npm run test
