--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
-language: generic
 sudo: required
 services:
  - docker
 before_install:
   - docker build -t gallopabman/frontend -f Dockerfile.dev .
 script:  
-  - docker run gallopabman/frontend npm run test -- --coverage
+  - docker -e CI=true run gallopabman/frontend npm run test 
